turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:16: error: Missing closing brace `}' assumed here
}
^